k8s/backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.network/frappe_network: "true"
    io.kompose.service: backend
  name: backend
spec:
  containers:
  - env:
    - name: DB_HOST
      value: db
    - name: DB_PORT
      value: "3306"
    - name: MARIADB_ROOT_PASSWORD
      value: admin
    - name: MYSQL_ROOT_PASSWORD
      value: admin
    image: frappe/erpnext:v15.54.5
    name: backend
    resources: {}
    volumeMounts:
    - mountPath: /home/frappe/frappe-bench/sites
      name: sites
    - mountPath: /home/frappe/frappe-bench/logs
      name: logs
  restartPolicy: OnFailure
  volumes:
  - name: sites
    persistentVolumeClaim:
      claimName: sites
  - name: logs
    persistentVolumeClaim:
      claimName: logs
status: {}
