k8s/db-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.network/frappe_network: "true"
    io.kompose.service: db
  name: db
spec:
  containers:
  - args:
    - --character-set-server=utf8mb4
    - --collation-server=utf8mb4_unicode_ci
    - --skip-character-set-client-handshake
    - --skip-innodb-read-only-compressed
    image: mariadb:10.6
    livenessProbe:
      exec:
        command:
        - mysqladmin ping -h localhost --password=admin
      failureThreshold: 20
      periodSeconds: 1
    name: db
    resources: {}
    volumeMounts:
    - mountPath: /var/lib/mysql
      name: db-data
  restartPolicy: OnFailure
  volumes:
  - name: db-data
    persistentVolumeClaim:
      claimName: db-data
status: {}
