k8s/frontend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.network/frappe_network: "true"
    io.kompose.service: frontend
  name: frontend
spec:
  containers:
  - args:
    - nginx-entrypoint.sh
    image: frappe/erpnext:v15.54.5
    name: frontend
    ports:
    - containerPort: 8080
    resources: {}
    volumeMounts:
    - mountPath: /home/frappe/frappe-bench/sites
      name: sites
    - mountPath: /home/frappe/frappe-bench/logs
      name: logs
  restartPolicy: OnFailure
  volumes:
  - name: sites
    persistentVolumeClaim:
      claimName: sites
  - name: logs
    persistentVolumeClaim:
      claimName: logs
status: {}
