k8s/redis-cache-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.network/frappe_network: "true"
    io.kompose.service: redis-cache
  name: redis-cache
spec:
  containers:
  - image: redis:6.2-alpine
    name: redis-cache
    resources: {}
  restartPolicy: OnFailure
status: {}
