k8s/redis-queue-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.network/frappe_network: "true"
    io.kompose.service: redis-queue
  name: redis-queue
spec:
  containers:
  - image: redis:6.2-alpine
    name: redis-queue
    resources: {}
    volumeMounts:
    - mountPath: /data
      name: redis-queue-data
  restartPolicy: OnFailure
  volumes:
  - name: redis-queue-data
    persistentVolumeClaim:
      claimName: redis-queue-data
status: {}
